# jsondiffview

./: README.md  RELEASING.md  after.json  before.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/: jsondiffview.py  jsondiffview_cli.py  jsondiffview_diff_engine.py  jsondiffview_errors.py  jsondiffview_loader.py  jsondiffview_match_rules.py  jsondiffview_matcher.py  jsondiffview_path_syntax.py  jsondiffview_testing.py  jsondiffview_types.py
src/jdv/: cli.py  diff.py  io.py  layout.py  match.py  model.py  paths.py  render.py  string_diff.py
src/json_diff_cli/: cli.py  diff_engine.py  loader.py  match_rules.py  matcher.py  path_syntax.py  testing.py  text_diff.py  types.py
src/json_diff_cli/renderers/: __init__.py  changed.py  common.py  focused.py  full.py
src/jsondiffview_renderers/: __init__.py  changed.py  common.py  full.py
tests/: conftest.py  test_changed_renderer.py  test_cli.py  test_cli_e2e.py  test_cli_entrypoint.py  test_diff_engine_basic.py  test_diff_engine_smart_arrays.py  test_focused_renderer.py  test_full_renderer.py  test_io.py  test_loader.py  test_match.py  test_match_rules.py  test_matcher.py  test_paths.py  test_render_snapshots.py  test_rendering.py  test_string_diff.py  test_text_diff.py
tests/fixtures/: compact-move-edit-new.json  compact-move-edit-old.json  complex-anchor-new.json  complex-anchor-old.json  exact-value-move-new.json  exact-value-move-old.json  focus-pure-add-new.json  focus-pure-add-old.json  full-move-edit-new.json  full-move-edit-old.json  multiline-string-new.json  multiline-string-old.json  root-replace-old.json  root-string-multiline-new.json  string-blob-new.json  string-blob-old.json  string-block-trailing-comma-new.json  string-block-trailing-comma-old.json  string-inline-micro-new.json  string-inline-micro-old.json  string-inline-word-new.json  string-inline-word-old.json
tests/fixtures/expected/: compact_move_edit.txt  complex_anchor.txt  exact_value_move.txt  focus_pure_add.txt  full_move_edit.txt  multiline_block.txt  root_replace.txt  root_string_multiline.txt  string_blob_compact.txt  string_blob_focus.txt  string_blob_full.txt  string_block_trailing_comma.txt  string_inline_microdiff.txt  string_inline_word_replace.txt
