[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "jdv"
version = "0.1.0"
description = "A JSON diff CLI focused on review-oriented output."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
]

[project.scripts]
jdv = "jdv.cli:entrypoint"

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jdv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
